--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
     right:
       - text: Home
         href: index.qmd
+      - text: About
+        href: about.qmd
 
 format:
   html:
