--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,8 @@ project:
 website:
   title: "Cabarrus Data Lab"
   site-url: https://cabarrusdatalab.com
+  repo-url: https://github.com/pebenbow/cabarrus-data-lab
+  repo-actions: [source, issue]
   open-graph: true # https://quarto.org/docs/websites/website-tools.html#open-graph
   page-footer:
     right: "Made with Quarto"
