Getting the blog stuff organized

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,6 +17,8 @@ website:
     right:
       - text: Home
         href: index.qmd
+      - text: Blog
+        href: blog/index.qmd
       - text: About
         href: about.qmd
 
